--- a/apps/fumadocs/content/docs/customers.mdx
+++ b/apps/fumadocs/content/docs/customers.mdx
@@ -188,4 +188,4 @@ Echo supports GDPR and LGPD data deletion requests:
 - You can approve or deny in the dashboard
 - Approved requests anonymize all customer data
 
-See [Settings > Privacy](/docs/settings) for data retention configuration.
+See [Settings > Privacy](/settings) for data retention configuration.
