--- a/apps/fumadocs/content/docs/faq.mdx
+++ b/apps/fumadocs/content/docs/faq.mdx
@@ -28,7 +28,7 @@ Contact us for current pricing. We offer plans based on message volume and featu
 
 ### How do I connect my WhatsApp number?
 
-Echo uses Twilio to connect to WhatsApp. You'll need a Twilio account, WhatsApp-enabled phone number (or sandbox for testing), and to configure a webhook URL. See the [WhatsApp integration guide](/docs/integrations/whatsapp) for detailed steps.
+Echo uses Twilio to connect to WhatsApp. You'll need a Twilio account, WhatsApp-enabled phone number (or sandbox for testing), and to configure a webhook URL. See the [WhatsApp integration guide](/integrations/whatsapp) for detailed steps.
 
 ### Can I use my personal WhatsApp number?
 
@@ -41,7 +41,7 @@ Check these common issues:
 2. Phone number format is wrong (needs E.164 format like +1234567890)
 3. Twilio sandbox expired (rejoin if testing)
 
-See [WhatsApp troubleshooting](/docs/integrations/whatsapp#troubleshooting) for more.
+See [WhatsApp troubleshooting](/integrations/whatsapp#troubleshooting) for more.
 
 ### Can I send messages to customers first?
 
@@ -67,7 +67,7 @@ Yes! You can configure:
 - Personality instructions (tone, style, behavior)
 - Escalation keywords (when to hand to humans)
 
-See [AI configuration](/docs/settings/ai-configuration) for details.
+See [AI configuration](/settings/ai-configuration) for details.
 
 ### What if the AI doesn't know the answer?
 
@@ -104,7 +104,7 @@ All orders appear in the Orders dashboard with their current status. Update stat
 
 ### Can I import products from Shopify?
 
-Yes! If you use Shopify, connect your store and import products with one click. Each Shopify variant becomes a separate Echo product. See [Shopify integration](/docs/integrations/shopify).
+Yes! If you use Shopify, connect your store and import products with one click. Each Shopify variant becomes a separate Echo product. See [Shopify integration](/integrations/shopify).
 
 ### How do I mark products as out of stock?
 
@@ -131,7 +131,7 @@ Echo stores:
 
 ### How do I delete customer data?
 
-You can delete customers from the customer profile. Alternatively, customers can request deletion by saying "forget me" or "delete my data" in chat. See [privacy settings](/docs/settings) for data retention options.
+You can delete customers from the customer profile. Alternatively, customers can request deletion by saying "forget me" or "delete my data" in chat. See [privacy settings](/settings) for data retention options.
 
 ## Troubleshooting
 
