--- a/apps/fumadocs/content/docs/getting-started/business-setup.mdx
+++ b/apps/fumadocs/content/docs/getting-started/business-setup.mdx
@@ -67,7 +67,7 @@ After creating your business, you can update all settings from **Settings > Gene
 - Modify your logo URL
 - Edit your address
 
-[Learn more about settings →](/docs/settings)
+[Learn more about settings →](/settings)
 
 ## Multiple Businesses
 
