--- a/apps/fumadocs/content/docs/getting-started/index.mdx
+++ b/apps/fumadocs/content/docs/getting-started/index.mdx
@@ -24,7 +24,7 @@ Complete the onboarding wizard to configure your business:
 
 Your business profile helps the AI understand your business and respond appropriately to customers.
 
-[Learn more about business setup →](/docs/getting-started/business-setup)
+[Learn more about business setup →](/getting-started/business-setup)
 
 ### Add your products
 
@@ -35,7 +35,7 @@ Build your product catalog so the AI can answer questions about pricing, availab
 - Set availability status for each product
 - Or import products from Shopify if you have an existing store
 
-[Learn more about products →](/docs/products)
+[Learn more about products →](/products)
 
 ### Connect WhatsApp
 
@@ -46,7 +46,7 @@ Link your WhatsApp Business number to Echo using Twilio:
 3. Configure the webhook URL to receive messages
 4. Test the connection by sending a message
 
-[Learn more about WhatsApp integration →](/docs/integrations/whatsapp)
+[Learn more about WhatsApp integration →](/integrations/whatsapp)
 
 ### Configure your AI assistant
 
@@ -56,7 +56,7 @@ Customize how the AI interacts with your customers:
 - **Personality instructions** — Define the tone and style of responses
 - **Escalation keywords** — Words that trigger human handover
 
-[Learn more about AI configuration →](/docs/settings/ai-configuration)
+[Learn more about AI configuration →](/settings/ai-configuration)
 
 ### Test your setup
 
@@ -76,13 +76,13 @@ Once testing is complete, you're ready to share your WhatsApp number with custom
 ## What's next?
 
 <Cards>
-  <Card href="/docs/products" title="Manage Products">
+  <Card href="/products" title="Manage Products">
     Add, edit, and organize your product catalog.
   </Card>
-  <Card href="/docs/conversations" title="Monitor Conversations">
+  <Card href="/conversations" title="Monitor Conversations">
     View AI conversations and take over when needed.
   </Card>
-  <Card href="/docs/orders" title="Handle Orders">
+  <Card href="/orders" title="Handle Orders">
     Track and fulfill customer orders.
   </Card>
 </Cards>
