--- a/apps/fumadocs/content/docs/index.mdx
+++ b/apps/fumadocs/content/docs/index.mdx
@@ -9,28 +9,28 @@ Echo is an **AI-powered customer service platform** that automates WhatsApp conv
 {/* Dashboard screenshot will be added in S16 */}
 
 <Cards>
-  <Card href="/docs/getting-started" title="Quick Start Guide">
+  <Card href="/getting-started" title="Quick Start Guide">
     Get up and running with Echo in about 30 minutes.
   </Card>
-  <Card href="/docs/products" title="Products">
+  <Card href="/products" title="Products">
     Manage your product catalog, categories, and availability.
   </Card>
-  <Card href="/docs/orders" title="Orders">
+  <Card href="/orders" title="Orders">
     Track and fulfill customer orders from start to delivery.
   </Card>
-  <Card href="/docs/conversations" title="Conversations">
+  <Card href="/conversations" title="Conversations">
     Monitor AI conversations and take over when needed.
   </Card>
-  <Card href="/docs/customers" title="Customers">
+  <Card href="/customers" title="Customers">
     View customer profiles, order history, and preferences.
   </Card>
-  <Card href="/docs/integrations" title="Integrations">
+  <Card href="/integrations" title="Integrations">
     Connect WhatsApp, Shopify, and other services.
   </Card>
-  <Card href="/docs/settings" title="Settings">
+  <Card href="/settings" title="Settings">
     Configure your business, AI behavior, and more.
   </Card>
-  <Card href="/docs/faq" title="FAQ">
+  <Card href="/faq" title="FAQ">
     Answers to frequently asked questions.
   </Card>
 </Cards>
