--- a/apps/fumadocs/content/docs/integrations/index.mdx
+++ b/apps/fumadocs/content/docs/integrations/index.mdx
@@ -9,10 +9,10 @@ Echo integrates with essential services to power your customer service automatio
 ## Available Integrations
 
 <Cards>
-  <Card href="/docs/integrations/whatsapp" title="WhatsApp">
+  <Card href="/integrations/whatsapp" title="WhatsApp">
     Connect your WhatsApp Business number via Twilio to receive and send customer messages.
   </Card>
-  <Card href="/docs/integrations/shopify" title="Shopify">
+  <Card href="/integrations/shopify" title="Shopify">
     Import products from your Shopify store and sync orders.
   </Card>
 </Cards>
@@ -31,7 +31,7 @@ You can check the status of all integrations in **Settings > Integrations**. Eac
 
 WhatsApp is **required** for Echo to function. Without it, you can't receive customer messages.
 
-[Set up WhatsApp →](/docs/integrations/whatsapp)
+[Set up WhatsApp →](/integrations/whatsapp)
 
 ## Optional Integrations
 
@@ -39,7 +39,7 @@ WhatsApp is **required** for Echo to function. Without it, you can't receive cus
 
 If you already have a Shopify store, you can import your products instead of adding them manually. This saves time and keeps your catalog in sync.
 
-[Set up Shopify →](/docs/integrations/shopify)
+[Set up Shopify →](/integrations/shopify)
 
 ## Future Integrations
 
