--- a/apps/fumadocs/content/docs/integrations/shopify.mdx
+++ b/apps/fumadocs/content/docs/integrations/shopify.mdx
@@ -27,7 +27,7 @@ Enter your Shopify store URL:
 - Use the format: `your-store.myshopify.com`
 - Don't include `https://` or trailing slashes
 
-{/* Screenshot: shopify-connect.png showing store URL input */}
+![Shopify store URL input](/images/shopify-connect.png)
 
 ### Authorize the Connection
 
