--- a/apps/fumadocs/content/docs/orders.mdx
+++ b/apps/fumadocs/content/docs/orders.mdx
@@ -148,7 +148,7 @@ If you use Shopify, orders placed through Echo can be synced to your Shopify sto
 
 A "View in Shopify" link appears on orders paid through Shopify.
 
-See [Shopify Integration](/docs/integrations/shopify) for setup details.
+See [Shopify Integration](/integrations/shopify) for setup details.
 
 ## Best Practices
 
