--- a/apps/fumadocs/content/docs/products/index.mdx
+++ b/apps/fumadocs/content/docs/products/index.mdx
@@ -95,7 +95,7 @@ When products are selected, a toolbar appears at the bottom with these actions:
 | **Delete** | Delete all selected products (with confirmation) |
 | **Move to...** | Change the category for all selected products |
 
-{/* Screenshot: bulk-operations.png showing selection toolbar */}
+![Bulk operations toolbar with multiple products selected](/images/bulk-operations.png)
 
 ### Example: Seasonal Menu Update
 
@@ -106,7 +106,7 @@ When products are selected, a toolbar appears at the bottom with these actions:
 
 ## Shopify Product Import
 
-If you use Shopify, you can import your entire product catalog automatically. See [Shopify Integration](/docs/integrations/shopify) for setup instructions.
+If you use Shopify, you can import your entire product catalog automatically. See [Shopify Integration](/integrations/shopify) for setup instructions.
 
 Imported products are linked to Shopify and will sync availability when configured.
 
