--- a/apps/fumadocs/content/docs/settings/index.mdx
+++ b/apps/fumadocs/content/docs/settings/index.mdx
@@ -25,7 +25,7 @@ Customize how the AI behaves:
 - **AI Personality** — Greeting message, personality instructions
 - **Escalation Rules** — Keywords that trigger human handover
 
-[Learn more about AI configuration →](/docs/settings/ai-configuration)
+[Learn more about AI configuration →](/settings/ai-configuration)
 
 ### Integrations
 
@@ -34,7 +34,7 @@ Connect external services:
 - **WhatsApp** — Connect via Twilio to receive messages
 - **Shopify** — Import products and sync orders
 
-[Learn more about integrations →](/docs/integrations)
+[Learn more about integrations →](/integrations)
 
 ### Privacy
 
