--- a/apps/fumadocs/content/docs/getting-started/index.mdx
+++ b/apps/fumadocs/content/docs/getting-started/index.mdx
@@ -12,7 +12,7 @@ Follow these steps to set up Echo and start automating your WhatsApp customer se
 
 Sign up for Echo using your email address or Google account. You'll receive a confirmation email to verify your account.
 
-[Sign up for Echo →](/signup)
+[Sign up for Echo →](https://app.echo.com/signup)
 
 ### Set up your business profile
 
